[gd_scene load_steps=47 format=3 uid="uid://bgv3jfx46sn4t"]

[ext_resource type="Script" path="res://scripts/units/enemy/enemy.gd" id="1_pq78i"]
[ext_resource type="AudioStream" uid="uid://cfi2l43wngyak" path="res://sound/Goblin/Goblin Attack Voice 1.mp3" id="2_d0bak"]
[ext_resource type="Texture2D" uid="uid://cbnayhrym7wdc" path="res://art/shapes/thin circle 64x64.png" id="3_oisd4"]
[ext_resource type="AudioStream" uid="uid://c3te38574l7hl" path="res://sound/Goblin/Goblin Attack Voice 2.mp3" id="3_u3bl8"]
[ext_resource type="AudioStream" uid="uid://cuxetebaig84w" path="res://sound/Goblin/Goblin Attack Voice 3.mp3" id="4_jg4eg"]
[ext_resource type="Texture2D" uid="uid://ha20xrg7fvf2" path="res://art/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Red/Torch_Red.png" id="4_mqg2b"]
[ext_resource type="AudioStream" uid="uid://discj5w3ukyhh" path="res://sound/Goblin/Goblin Wounded 1.mp3" id="6_ljq68"]
[ext_resource type="Script" path="res://scripts/attackable.gd" id="7_f1uym"]
[ext_resource type="AudioStream" uid="uid://chojikkx1xecr" path="res://sound/Goblin/Goblin Wounded 2.mp3" id="7_sh3m0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_78wmw"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ccr55"]
atlas = ExtResource("4_mqg2b")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixbw1"]
atlas = ExtResource("4_mqg2b")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yr24"]
atlas = ExtResource("4_mqg2b")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mircc"]
atlas = ExtResource("4_mqg2b")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh51l"]
atlas = ExtResource("4_mqg2b")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwfva"]
atlas = ExtResource("4_mqg2b")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g31lm"]
atlas = ExtResource("4_mqg2b")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_atk23"]
atlas = ExtResource("4_mqg2b")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkgr2"]
atlas = ExtResource("4_mqg2b")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6au3h"]
atlas = ExtResource("4_mqg2b")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_afgx1"]
atlas = ExtResource("4_mqg2b")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu43o"]
atlas = ExtResource("4_mqg2b")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjss4"]
atlas = ExtResource("4_mqg2b")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t5br"]
atlas = ExtResource("4_mqg2b")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf02d"]
atlas = ExtResource("4_mqg2b")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_80fb8"]
atlas = ExtResource("4_mqg2b")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fql80"]
atlas = ExtResource("4_mqg2b")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_70fvg"]
atlas = ExtResource("4_mqg2b")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xlw7"]
atlas = ExtResource("4_mqg2b")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cu73"]
atlas = ExtResource("4_mqg2b")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gwj5"]
atlas = ExtResource("4_mqg2b")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_istix"]
atlas = ExtResource("4_mqg2b")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1s2h"]
atlas = ExtResource("4_mqg2b")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nrf5"]
atlas = ExtResource("4_mqg2b")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vgpb"]
atlas = ExtResource("4_mqg2b")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukvnl"]
atlas = ExtResource("4_mqg2b")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob8oo"]
atlas = ExtResource("4_mqg2b")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ilnc"]
atlas = ExtResource("4_mqg2b")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hao6l"]
atlas = ExtResource("4_mqg2b")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_udjgc"]
atlas = ExtResource("4_mqg2b")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwp3b"]
atlas = ExtResource("4_mqg2b")
region = Rect2(960, 768, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_v2ujg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccr55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixbw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yr24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mircc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh51l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwfva")
}],
"loop": true,
"name": &"down_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g31lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atk23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkgr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6au3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afgx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu43o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g31lm")
}],
"loop": true,
"name": &"front_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjss4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t5br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf02d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80fb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fql80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70fvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xlw7")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cu73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gwj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_istix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1s2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nrf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vgpb")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukvnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob8oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ilnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hao6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udjgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwp3b")
}],
"loop": true,
"name": &"up_attack",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kikdj"]
radius = 225.18

[sub_resource type="CircleShape2D" id="CircleShape2D_n7gtl"]
radius = 347.052

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l5a1"]
size = Vector2(35, 49)

[sub_resource type="CircleShape2D" id="CircleShape2D_m06k7"]
radius = 100.0

[node name="Goblin" type="CharacterBody2D" groups=["Attackable", "enemies"]]
y_sort_enabled = true
script = ExtResource("1_pq78i")
engage_sounds = Array[AudioStream]([ExtResource("2_d0bak"), ExtResource("3_u3bl8"), ExtResource("4_jg4eg")])
movement_speed = 50.0
team = 2

[node name="Attackable" type="Node2D" parent="."]
script = ExtResource("7_f1uym")
hurt_sounds = Array[AudioStream]([ExtResource("6_ljq68"), ExtResource("7_sh3m0")])

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 21.2
avoidance_enabled = true
radius = 30.0
max_speed = 500.0
avoidance_layers = 2
avoidance_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_78wmw")

[node name="Selection Circle" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0, 1, 0, 1)
position = Vector2(0, -6)
scale = Vector2(0.4375, 0.353125)
texture = ExtResource("3_oisd4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -27)
sprite_frames = SubResource("SpriteFrames_v2ujg")
animation = &"up_attack"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="ChaseRadius" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseRadius"]
shape = SubResource("CircleShape2D_kikdj")
debug_color = Color(0.994425, 0, 0.222291, 0.42)

[node name="VisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
visible = false
shape = SubResource("CircleShape2D_n7gtl")
debug_color = Color(0.756863, 0.454902, 0, 0.0666667)

[node name="SelectionHoverArea" type="Area2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionHoverArea"]
visible = false
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_4l5a1")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
shape = SubResource("CircleShape2D_m06k7")
debug_color = Color(0.996078, 0, 0.172549, 0.113725)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -64.0
offset_top = -149.0
offset_right = 64.0
offset_bottom = -139.0
value = 53.13
show_percentage = false

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_path_changed"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_exited" from="ChaseRadius" to="." method="_on_chase_radius_body_exited"]
[connection signal="mouse_entered" from="SelectionHoverArea" to="Attackable" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="SelectionHoverArea" to="Attackable" method="_on_mouse_exited"]
